# lol-stats

./: .gitattributes  .gitignore  LICENSE  README.md  package-lock.json  package.json  update.json
docs/: scoring-system.md
scripts/: publish-release.ps1
src/: App.vue  api.ts  assetLoader.ts  funStats.ts  imageShare.ts  main.ts  matchTeamSummary.ts  notifications.ts  playerProfile.ts  rankIcons.ts  roleClassifier.ts  scoring.ts  toolSettings.ts  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/nsis/: SimpChinese.nsh
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/services/: client_discovery.rs  error.rs  lcu.rs  mod.rs  models.rs  sgp.rs  stats.rs  tools.rs
src/assets/hextech/: augments.zh-CN.json
src/components/: AssetIcon.vue  ChampionAvatar.vue  FriendsTool.vue  FunStatsPanel.vue  GameRecordList.vue  GoldRangeSlider.vue  HextechAugmentDesigner.vue  LiveGamePanel.vue  MatchHistoryPanel.vue  MatchOverviewPanel.vue  PlayerRecordTab.vue  RecordView.vue  ReservedTools.vue  StatsPanel.vue  ToastStack.vue  ToolsPanel.vue
