[package]
name = "lol-stats"
version = "0.6.0"
description = "国服英雄联盟战绩统计工具"
authors = ["local"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lol_stats_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_path_to_error = "0.1"
base64 = "0.22"
arboard = "3.4"
futures = "0.3"
image = { version = "0.25", default-features = false, features = ["png"] }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
sysinfo = "0.33"
thiserror = "2"
tokio = { version = "1", features = ["time"] }
urlencoding = "2"
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Threading",
  "Win32_UI_Input_KeyboardAndMouse"
] }
